--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <header>
-    <nav class="nav__bar" id="navbar">
+  <header id="navbar">
+    <nav>
         <ul>
-            <li><a class="nav__links" href="#welcome-section">About</a></li>
+           >Contact</a></li> <li><a class="nav__links" href="#welcome-section">About</a></li>
             <li><a class="nav__links" href="#projects">Work</a></li>
-            <li><a class="nav__links" href="#contact">Contact</a></li>
+            <li><a class="nav__links" href="#contact">contect</a>
         </ul>
     </nav>
 
@@ -29,7 +29,7 @@
         <h2>These are some of my projects</h2>
         <div class="projects__div">
             </a>
-<a id="profile-link" href="https://github.com/royajamal" target="-blank"> visite my GitHub profile</a>
+<a id="profile-link" href="https://github.com/your-github-profile" target="-blank"> visite my GitHub profile</a>
         
     </section>
 </main>
