added some new chenges

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <header id="navbar">
     <nav>
         <ul>
-           >Contact</a></li> <li><a class="nav__links" href="#welcome-section">About</a></li>
+           </a></li> <li><a class="nav__links" href="#welcome-section">About</a></li>
             <li><a class="nav__links" href="#projects">Work</a></li>
-            <li><a class="nav__links" href="#contact">contect</a>
+            <li><a class="nav__links" href="#contact">contect</a></li>
         </ul>
     </nav>
 
