--- a/index.html
+++ b/index.html
@@ -3,34 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Protfolio Webpage</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Final projects</title>
 </head>
 <body>
-  <header id="navbar">
-    <nav>
-      <ul>
-          </a></li> <li><a class="nav__links" href="#welcome-section">About</a></li>
-          <li><a class="nav__links" href="#projects">Work</a></li>
-          <li><a class="nav__links" href="#contact">contect</a></li>
-      </ul>
-    </nav>
-
-  <section class="section__first" id="welcome-section">
-
-    <h1 class="section__h1">Hey I am Roya Jamal</h1>
-    <p class="section__p">a web developper</p>
-
+<header>
+<nav class="nav__bar" id="navbar">
+<ul>
+<li><a class="nav__links" href="#welcome-section">About</a></li>
+<li><a class="nav__links" href="#projects">work</a></li>
+<li><a class="nav__links" href="#cantact">cantact</a></li>
+</ul>
+</nav>
+<section class="section__first" id="welcome-section">
+  <h1 class="section__h1">Hey I am Roya Jamal </h1>
+  <p class="section__p"> A web developer</p>
   </section>
   </header>
-<main>
   <section class="section__projects" id="projects">
-    <h2>These are some of my projects</h2>
-    <div class="projects__div">
-    </a>
-<a id="profile-link" href="https://github.com/your-github-profile" target="-blank"> visite my GitHub profile</a>
-
-  </section>
-</main>
+<h2>These are some of my projects</h2>
+<a id="profile-link" href="https://github.com/royajamal" target="_blank" class="project-tile"> visite my GitHub profile</a>
+</section>
 </body>
 </html>
