added new chenges in html file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
   <section class="section__projects" id="projects">
     <h2>These are some of my projects</h2>
-     <a id="profile-link" href="https://github.com/royajamal" target="_blank" class="project-tile"> visite my GitHub profile</a>
+     <a id="profile-link" rel="noopener"  href="https://github.com/royajamal" target="_blank" class="project-tile"> visite my GitHub profile</a>
 </section>
 </body>
 </html>
